# goode_engine

./: .clang-format  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  Conan.cmake  PreventInSourceBuilds.cmake
src/: CMakeLists.txt  Definitions.hpp  Game.cpp  Game.hpp  main.cpp  pch.hpp
src/assets/config/: graphics_settings.ini
src/commands/: Command.hpp  Undo.hpp  Walk.hpp
src/components/: AnimationComponent.cpp  AnimationComponent.hpp  HitboxComponent.cpp  HitboxComponent.hpp  MovementComponent.cpp  MovementComponent.hpp
src/debug/: FPS.hpp  MousePosition.hpp
src/effects/: Effect.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp
src/entities/: Entity.cpp  Entity.hpp
src/entities/enemies/: Enemy.cpp  Enemy.hpp  Rat.cpp  Rat.hpp
src/entities/players/: Player.cpp  Player.hpp
src/gui/: Button.cpp  Button.hpp  Container.cpp  Container.hpp  DropDownList.cpp  DropDownList.hpp  Gui.cpp  Gui.hpp  PauseMenu.cpp  PauseMenu.hpp  Slider.cpp  Slider.hpp  Utilities.cpp  Utilities.hpp  Widget.cpp  Widget.hpp
src/input_handlers/: InputHandler.cpp  InputHandler.hpp
src/inventory/: Inventory.cpp  Inventory.hpp  Item.cpp  Item.hpp  Potion.cpp  Potion.hpp  Tool.cpp  Tool.hpp  Weapon.cpp  Weapon.hpp
src/managers/: FontManager.cpp  FontManager.hpp  MusicManager.cpp  MusicManager.hpp  SoundManager.cpp  SoundManager.hpp  TextureManager.cpp  TextureManager.hpp  WindowManager.cpp  WindowManager.hpp
src/states/: EditorState.cpp  EditorState.hpp  GameOverState.cpp  GameOverState.hpp  MainMenuState.cpp  MainMenuState.hpp  SettingsState.cpp  SettingsState.hpp  SplashState.cpp  SplashState.hpp  State.cpp  State.hpp  StateMachine.cpp  StateMachine.hpp
src/states/game_state/: GameState.cpp  GameState.hpp
src/tiles/: Tile.cpp  Tile.hpp
src/utilities/: Random.cpp  Random.hpp
src/world/: TileMap.cpp  TileMap.hpp  WorldTime.hpp
test/: CMakeLists.txt
